# kvak

./: .eslintrc.js  App.tsx  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.json  index.js  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
.agents/skills/kvak-e2e-test/: SKILL.md
.agents/skills/kvak-e2e-test/references/: adb-quirks.md  native-rebuild.md  rag-verification.md
.agents/skills/kvak-e2e-test/scripts/: adb-ui  rebuild-bridge.sh  sideload-model.sh
.agents/skills/kvak-e2e-test/workflows/: e2e-test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
__tests__/: chunk.test.ts  helpers.test.ts  mcp.test.ts  reducer.test.ts  templates.test.ts  tool-parse.test.ts  tools.test.ts
android/: gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.android.bundle
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/kvak/: LlamaBridge.kt  LlamaModule.kt  LlamaPackage.kt  MainActivity.kt  MainApplication.kt  SpeechModule.kt  SpeechPackage.kt  WhisperBridge.kt  WhisperModule.kt  WhisperPackage.kt
android/app/src/main/java/com/mangoqvac/: LlamaBridge.kt  LlamaModule.kt  LlamaPackage.kt  MainActivity.kt  MainApplication.kt  SpeechModule.kt  SpeechPackage.kt  WhisperBridge.kt  WhisperModule.kt  WhisperPackage.kt
android/app/src/main/jni/: llama_bridge.cpp  whisper_bridge.cpp
android/app/src/main/jniLibs/: CMakeLists.txt
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: network_security_config.xml
docs/: contextvm.md
examples/contextvm/: README.md  gateway.ts  mcp-server.ts  package.json  relay.mjs
ios/: Podfile
ios/Kvak/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/Kvak.xcodeproj/: project.pbxproj
ios/Kvak.xcodeproj/xcshareddata/xcschemes/: Kvak.xcscheme
ios/Kvak/Images.xcassets/AppIcon.appiconset/: Contents.json
ios/MangoQvac/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/MangoQvac.xcodeproj/: project.pbxproj
ios/MangoQvac.xcodeproj/xcshareddata/xcschemes/: MangoQvac.xcscheme
src/: state.tsx  types.ts
src/components/: ErrorBoundary.tsx  MarkdownText.tsx
src/hooks/: useKeyboardHeight.ts
src/screens/: ChatScreen.tsx  ConversationListScreen.tsx  DocumentLibraryScreen.tsx  LockScreen.tsx  ModelPickerScreen.tsx  SettingsScreen.tsx
src/services/: constants.ts  helpers.ts  mcp.ts  native.ts  nostr-mcp.ts  storage.ts  templates.ts  textencoding-polyfill.ts  tool-parse.ts  tools.ts
src/theme/: colors.ts  index.ts  styles.ts
tools/: gen_icon.py
